# File2QR

./: README.md  pyproject.toml
src/: main.py
src/file2qr/: __init__.py
