[project]
name = "file2qr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shimpei Ueno", email = "" }
]
dependencies = [
    "qrcode>=7.4.2",
    "opencv-python-headless>=4.8.1.78",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
